--- a/miniproj/src/main/resources/application.properties
+++ b/miniproj/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=miniproj
 
 spring.datasource.url=jdbc:mysql://localhost:3306/miniproj
 spring.datasource.username=root
-spring.datasource.password=k1r2i3t4h5@08
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
